--- a/app/src/main/res/layout/fragment_boater_message.xml
+++ b/app/src/main/res/layout/fragment_boater_message.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BoaterMessageFragment"
+    tools:context=".view.boater.BoaterMessageFragment"
     android:orientation="vertical">
 
     <TextView
