--- a/app/src/main/res/layout/fragment_boater_profile.xml
+++ b/app/src/main/res/layout/fragment_boater_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BoaterProfileFragment">
+    tools:context=".view.boater.BoaterProfileFragment">
 
     <RelativeLayout
         android:id="@+id/image_section"
