--- a/app/src/main/res/layout/fragment_marina_landing_booking.xml
+++ b/app/src/main/res/layout/fragment_marina_landing_booking.xml
@@ -5,7 +5,7 @@
     android:id="@+id/marina_booking_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MarinaLandingBookingFragment">
+    tools:context=".view.marina.MarinaLandingBookingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
