--- a/app/src/main/res/layout/fragment_marina_manager_landing.xml
+++ b/app/src/main/res/layout/fragment_marina_manager_landing.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.MarinaManagerLandingFragment">
+    tools:context=".view.marina.MarinaManagerLandingFragment">
 
 
     <android.support.design.widget.AppBarLayout
