--- a/app/src/main/res/layout/fragment_signup_marina_manager.xml
+++ b/app/src/main/res/layout/fragment_signup_marina_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.SignUpMarinaManagerFragment">
+    tools:context=".view.marina.SignUpMarinaManagerFragment">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
