--- a/app/src/main/res/layout/fragment_upcoming_bookings.xml
+++ b/app/src/main/res/layout/fragment_upcoming_bookings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.UpcomingBookingsFragment">
+    tools:context=".view.boater.UpcomingBookingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
