--- a/app/src/main/res/layout/fragment_view_marina_description.xml
+++ b/app/src/main/res/layout/fragment_view_marina_description.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.ViewMarinaDescriptionFragment">
+    tools:context=".view.marina.ViewMarinaDescriptionFragment">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
