--- a/app/src/main/res/layout/marina_msg_brick.xml
+++ b/app/src/main/res/layout/marina_msg_brick.xml
@@ -12,35 +12,27 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-    <TextView
-        android:id="@+id/initial_text_view"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/circle"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/initial_text_view"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/boater_msg_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:text="@string/name"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
-
-    <ImageView
-        android:id="@+id/new_message_maker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
-        android:src="@drawable/small_green_circle" />
+        <TextView
+            android:id="@+id/boater_msg_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:text="@string/name"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
