--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -64,22 +64,43 @@
                 android:background="@color/white"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/marina_name_textView"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
                     android:layout_weight="1"
-                    android:text="@string/name"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/marina_name_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/name"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                    <TextView
+                        android:id="@+id/unavailable_msg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginBottom="3dp"
+                        android:text="@string/sufficient_docks_unavailable"
+                        android:textColor="@color/red"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
 
                 <RatingBar
                     android:id="@+id/marina_rating_bar"
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="5dp"
+                    android:layout_marginEnd="8dp"
                     android:isIndicator="true"
                     android:numStars="5"
                     android:progressTint="@color/goldenYellow" />
@@ -364,15 +385,6 @@
                     android:text="@string/send_a_message"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/colorPrimary" />
-
-                <TextView
-                    android:id="@+id/unavailable_msg"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="@string/sufficient_docks_unavailable"
-                    android:textColor="@color/red"
-                    android:textStyle="bold" />
 
             </LinearLayout>
 
