--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,10 +7,16 @@
 
     <fragment
         android:id="@+id/adminFragment"
-        android:name="com.navismart.navismart.view.AdminFragment"
+        android:name="com.navismart.navismart.view.admin.AdminFragment"
         android:label="admin_fragment"
         tools:layout="@layout/fragment_admin">
-
+        <action
+            android:id="@+id/admin_log_out_action"
+            app:destination="@+id/startFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
 
     <fragment
