--- a/app/src/main/res/layout/fragment_current_bookings.xml
+++ b/app/src/main/res/layout/fragment_current_bookings.xml
@@ -22,28 +22,21 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/white" />
 
-        <ImageView
-            android:id="@+id/reload_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_autorenew_white_24dp" />
-
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/current_bookings_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/no_booking_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_current_booking"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:text="@string/no_current_booking" />
 
 
 </LinearLayout>
