--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -68,7 +68,11 @@
             app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_landingFragment_to_boaterSearchFragment"
-            app:destination="@id/boaterSearchFragment" />
+            app:destination="@id/boaterSearchFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_landingFragment_to_chatFragment"
             app:destination="@id/chatFragment"
@@ -163,6 +167,13 @@
         <action
             android:id="@+id/action_checkoutFragment_to_boaterLandingFragment"
             app:destination="@id/boaterLandingFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_checkoutFragment_to_paymentInfoFragment"
+            app:destination="@id/paymentInfoFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -294,14 +305,14 @@
         android:id="@+id/bookingDetailsFragment"
         android:name="com.navismart.navismart.view.marina.BookingDetailsFragment"
         android:label="fragment_booking_details"
-        tools:layout="@layout/fragment_booking_details" >
+        tools:layout="@layout/fragment_booking_details">
         <action
             android:id="@+id/action_bookingDetailsFragment_to_chatFragment"
             app:destination="@id/chatFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
@@ -339,6 +350,19 @@
         <action
             android:id="@+id/action_marinaProfileFragment_to_startFragment"
             app:destination="@id/startFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/paymentInfoFragment"
+        android:name="com.navismart.navismart.view.boater.PaymentInfoFragment"
+        android:label="fragment_payment_info"
+        tools:layout="@layout/fragment_payment_info">
+        <action
+            android:id="@+id/action_paymentInfoFragment_to_boaterLandingFragment"
+            app:destination="@id/boaterLandingFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
