--- a/app/src/main/res/layout/boat_data_layout.xml
+++ b/app/src/main/res/layout/boat_data_layout.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginStart="12dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="12dp"
+    android:layout_marginBottom="6dp"
     app:cardCornerRadius="@dimen/card_corner_radius"
     app:cardElevation="2dp"
     app:ignore="NamespaceTypo"
@@ -25,7 +26,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/boat_name"
             android:textColor="#262626"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -55,7 +56,7 @@
                 android:layout_weight="1"
                 android:text="@string/boat_ID"
                 android:textColor="#737373"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/boatIDTextView"
@@ -64,7 +65,7 @@
                 android:layout_weight="1"
                 android:text="@string/boat_type"
                 android:textColor="#737373"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -83,7 +84,7 @@
                 android:layout_weight="1"
                 android:paddingEnd="24dp"
                 android:textColor="#444444"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/boat_type_display"
@@ -92,7 +93,7 @@
                 android:layout_weight="1"
                 android:paddingEnd="24dp"
                 android:textColor="#444444"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -112,7 +113,7 @@
                 android:layout_weight="1"
                 android:text="@string/length"
                 android:textColor="#737373"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/boatBeamTextView"
@@ -121,7 +122,7 @@
                 android:layout_weight="1"
                 android:text="@string/beam"
                 android:textColor="#737373"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -141,7 +142,7 @@
                 android:layout_weight="1"
                 android:paddingEnd="24dp"
                 android:textColor="#444444"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/boat_beam_display"
@@ -149,81 +150,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="#444444"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
     </RelativeLayout>
 
-    <!--<RelativeLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@color/colorPrimary">-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/boat_name"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginStart="10dp"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_marginBottom="5dp"-->
-    <!--android:text="@string/name"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
-    <!--android:textColor="@color/white" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/boat_id_display"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/boat_name"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_marginEnd="10dp"-->
-    <!--android:text="@string/id"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-    <!--android:textColor="@color/white" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/boat_length_display"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/boat_id_display"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_marginEnd="10dp"-->
-    <!--android:text="@string/length"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-    <!--android:textColor="@color/white" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/boat_beam_display"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/boat_length_display"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_marginEnd="10dp"-->
-    <!--android:text="@string/beam"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-    <!--android:textColor="@color/white" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/boat_type_display"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/boat_beam_display"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_marginEnd="10dp"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:text="@string/type"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
-    <!--android:textColor="@color/white" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/deleteBoat"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_above="@+id/boat_id_display"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_margin="8dp"-->
-    <!--android:src="@drawable/ic_delete_white_24dp" />-->
-    <!--</RelativeLayout>-->
 
 </android.support.v7.widget.CardView>
