--- a/app/src/main/res/layout/fragment_signup_boater.xml
+++ b/app/src/main/res/layout/fragment_signup_boater.xml
@@ -215,16 +215,37 @@
                     android:theme="@style/BaseLineTheme" />
             </android.support.design.widget.TextInputLayout>
 
-
-            <Button
-                android:id="@+id/upload_registration_button"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:backgroundTint="@color/colorPrimary"
-                android:text="@string/upload_registration"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/white" />
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/boat_registration_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:baselineAligned="false"
+                        android:hint="@string/boat_registration_file_path"
+                        android:theme="@style/BaseLineTheme"
+                        android:focusable="false"/>
+                </android.support.design.widget.TextInputLayout>
+                <Button
+                    android:id="@+id/upload_registration_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="@string/upload"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
 
             <View
                 android:layout_width="match_parent"
