--- a/app/src/main/res/layout/fragment_write_review_reply.xml
+++ b/app/src/main/res/layout/fragment_write_review_reply.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,6 +35,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="3dp"
                 android:text="@string/name"
+                android:textColor="#444444"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -45,7 +46,8 @@
                 android:layout_marginStart="12dp"
                 android:text="@string/date"
                 android:textColor="#737373"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:textStyle="italic" />
         </LinearLayout>
 
         <RatingBar
@@ -66,10 +68,12 @@
         android:id="@+id/reviewTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/review" />
+        android:text="@string/review"
+        android:textColor="#363636"
+        android:textSize="16sp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
