--- a/app/src/main/res/layout/fragment_booking_details.xml
+++ b/app/src/main/res/layout/fragment_booking_details.xml
@@ -79,13 +79,23 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/cancelled_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/booking_cancelled"
+        android:textColor="@color/red"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
