--- a/app/src/main/res/layout/fragment_signup_marina_manager.xml
+++ b/app/src/main/res/layout/fragment_signup_marina_manager.xml
@@ -441,12 +441,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <NumberPicker
+                <EditText
                     android:id="@+id/reception_capacity_number_picker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:inputType="number" />
 
                 <TextView
                     android:layout_width="wrap_content"
