--- a/app/src/main/res/layout/fragment_boater_search.xml
+++ b/app/src/main/res/layout/fragment_boater_search.xml
@@ -121,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <NumberPicker
+                <EditText
                     android:id="@+id/no_of_dock_picker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
