--- a/app/src/main/res/layout/fragment_marina_description_edit.xml
+++ b/app/src/main/res/layout/fragment_marina_description_edit.xml
@@ -16,7 +16,8 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/marina_name_edit_text"
